# Spiking-Neural-Networks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
datasets/: __init__.py  loaders.py
experiments/: benchmark_cifar10.py  benchmark_neuromorphic.py  networks.py  run_apex_snn.py  run_apex_v2.py  run_comparison.py  run_final_comparison.py  run_nexus_ultimate.py  run_nexus_v2.py  run_triple_comparison.py  train_mnist.py
experiments/results/: apex_snn_20260206_021207.json  comparison_results_20260206_010944.json  comparison_results_20260206_011609.json  final_comparison_20260206_015706.json  nexus_ultimate_20260206_014749.json  nexus_v2_20260206_015616.json  triple_comparison_20260206_013104.json
models/: __init__.py  apex_snn.py  baseline_lif.py  dasnn.py  neurons.py  nexus_snn.py  spiking_kan.py  surrogate.py
notebooks/: 01_CIFAR10_SNN_Benchmark.ipynb  02_Neuromorphic_Datasets.ipynb  03_All_Models_MNIST.ipynb  04_CIFAR10_All_Models.ipynb
src/: __init__.py
src/layers/: __init__.py  attention.py  spiking_layers.py
src/learning/: __init__.py  adaptive_gradient.py  surrogate.py
src/models/: __init__.py  adaptive.py  base.py  dendritic.py  lif.py
src/training/: __init__.py  callbacks.py  trainer.py
src/utils/: __init__.py  visualization.py
